Implement soft frameset reload strategy - reload individual frames only. Frameset can be still reset via moving cursor into URL bar and pressing the enter key.

Reviewed by Germain Garand.

BUG:66958


svn path=/branches/KDE/3.5/kdelibs/; revision=623425